content-intel-xeon6-agent-201/manifests/solution-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution-ui
  labels:
    app: solution-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution-ui
  template:
    metadata:
      labels:
        app: solution-ui
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: solution-ui
          image: quay.io/redhat-gpte/triforce-solution-ui@sha256:9388d91c19e845b8dcee12ef9037e4b93afadea4df5e7912dbe0a6151b8605fb
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: solution-ui
spec:
  selector:
    app: solution-ui
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: app
  annotations:
    haproxy.router.openshift.io/timeout: 300s
spec:
  to:
    kind: Service
    name: solution-ui
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
